# polecoai

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERIFICATION.md  index.html  published.txt  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  rebuild-paper.yml  smoke-test.yml
.pytest_cache/v/cache/: nodeids
data/: README.md
data/reference/: job_exposure_frontline_subset.csv
docs/: blog_post.md  data_dictionary.md  findings.md  methodology.md  reproducibility.md
paper/: paper.md
paper/notes/: draft.md
results/: automation_share_by_bucket.csv  frontline_tasks.csv
results/tables/: exposure_2026_by_group.csv  regression_usage_wage.csv  representation_by_group.csv  robustness_misclassification.csv  robustness_task_split.csv  temporal_feb_vs_aug_2025.csv
scripts/: build_paper.py  download_data.py  run_analysis.py  run_extensions.py  run_latest_exposure.py  run_robustness.py
src/: 00_smoke_test.py  01_download_data.py  02_analysis.py  03_extensions.py  04_latest_exposure.py  05_robustness.py  06_make_pdf.py  07_verify_results.py
src/polecoai/: __init__.py  analysis.py  config.py  data.py  plotting.py  regressions.py
tests/: test_reported_results.py  test_smoke.py
writeup/: findings_summary.md  paper.md
