[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "polecoai"
version = "0.1.0"
description = "Reproducible analysis of observed AI use in frontline occupations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Sriramkrishnan Nandhakumar", email = "raam.nandhakumar@gmail.com"}
]
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "huggingface_hub>=0.23",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
